[metadata]
name = dav-monoestimation
version = 0.0.1
author = Ameet Rahane
author_email = ameetrahane@gmail.com
description = A package that implements the Depth Attention Volume (DAV) method for monocular estimation of depth.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AmeetR/Monocular-Depth-Estimation-DAV
project_urls =
    Bug Tracker = https://github.com/AmeetR/Monocular-Depth-Estimation-DAV/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src